// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResponseBodyRule body assertions added failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {},
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json",
        "kind": "body",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "response does not have \`type\`",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response type",
    "passed": false,
    "received": undefined,
    "type": "added",
    "where": "GET /api/users response 200 response body: application/json",
  },
]
`;

exports[`ResponseBodyRule body assertions added passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "string",
        },
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json",
        "kind": "body",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response type",
    "passed": true,
    "received": undefined,
    "type": "added",
    "where": "GET /api/users response 200 response body: application/json",
  },
]
`;

exports[`ResponseBodyRule body assertions changed failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "type": "object",
          },
        },
        "before": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "description": "123",
            "type": "array",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json",
        "kind": "body",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "response must not change type",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response shape",
    "passed": false,
    "received": undefined,
    "type": "changed",
    "where": "GET /api/users response 200 response body: application/json",
  },
]
`;

exports[`ResponseBodyRule body assertions changed passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "description": "12",
            "type": "array",
          },
        },
        "before": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "description": "123",
            "type": "array",
          },
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json",
        "kind": "body",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response shape",
    "passed": true,
    "received": undefined,
    "type": "changed",
    "where": "GET /api/users response 200 response body: application/json",
  },
]
`;

exports[`ResponseBodyRule body assertions custom matchers matches failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "object",
        },
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json",
        "kind": "body",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "Expected a partial match",
    "exempted": false,
    "expected": "{\\"schema\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"id\\":{\\"type\\":\\"string\\"}}}}",
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": false,
    "received": "{\\"schema\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"notid\\":{\\"type\\":\\"string\\"},\\"name\\":{\\"type\\":\\"string\\"}}}}",
    "type": "added",
    "where": "GET /api/users response 200 response body: application/json",
  },
]
`;

exports[`ResponseBodyRule body assertions custom matchers matches inverted assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "object",
        },
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json",
        "kind": "body",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": true,
    "received": undefined,
    "type": "added",
    "where": "GET /api/users response 200 response body: application/json",
  },
]
`;

exports[`ResponseBodyRule body assertions custom matchers matches passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "object",
        },
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json",
        "kind": "body",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": true,
    "received": undefined,
    "type": "added",
    "where": "GET /api/users response 200 response body: application/json",
  },
]
`;

exports[`ResponseBodyRule body assertions custom matchers matchesOneOf failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "object",
        },
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json",
        "kind": "body",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "Expected at least one partial match",
    "exempted": false,
    "expected": "[{\\"schema\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"id\\":{\\"type\\":\\"string\\"}}}},{\\"schema\\":{\\"type\\":\\"array\\",\\"items\\":{}}}]",
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": false,
    "received": "{\\"schema\\":{\\"type\\":\\"object\\",\\"properties\\":{\\"notid\\":{\\"type\\":\\"string\\"},\\"name\\":{\\"type\\":\\"string\\"}}}}",
    "type": "added",
    "where": "GET /api/users response 200 response body: application/json",
  },
]
`;

exports[`ResponseBodyRule body assertions custom matchers matchesOneOf inverted assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "object",
        },
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json",
        "kind": "body",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": true,
    "received": undefined,
    "type": "added",
    "where": "GET /api/users response 200 response body: application/json",
  },
]
`;

exports[`ResponseBodyRule body assertions custom matchers matchesOneOf passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "added": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "object",
        },
      },
      "changeType": "added",
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json",
        "kind": "body",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": true,
    "received": undefined,
    "type": "added",
    "where": "GET /api/users response 200 response body: application/json",
  },
]
`;

exports[`ResponseBodyRule body assertions removed failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "removed",
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json",
        "kind": "body",
      },
      "removed": Object {
        "before": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "type": "array",
          },
        },
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "cannot remove bodies with array schema",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request removal",
    "passed": false,
    "received": undefined,
    "type": "removed",
    "where": "GET /api/users response 200 response body: application/json",
  },
]
`;

exports[`ResponseBodyRule body assertions removed passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "removed",
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json",
        "kind": "body",
      },
      "removed": Object {
        "before": Object {
          "contentType": "application/json",
          "flatSchema": Object {
            "type": "string",
          },
        },
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request removal",
    "passed": true,
    "received": undefined,
    "type": "removed",
    "where": "GET /api/users response 200 response body: application/json",
  },
]
`;

exports[`ResponseBodyRule body assertions requirement failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json",
        "kind": "body",
      },
      "value": Object {
        "contentType": "application/json",
        "flatSchema": Object {},
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "response body does not have \`type\`",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response type",
    "passed": false,
    "received": undefined,
    "type": "requirement",
    "where": "GET /api/users response 200 response body: application/json",
  },
]
`;

exports[`ResponseBodyRule body assertions requirement passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json",
        "kind": "body",
      },
      "value": Object {
        "contentType": "application/json",
        "flatSchema": Object {
          "type": "string",
        },
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response type",
    "passed": true,
    "received": undefined,
    "type": "requirement",
    "where": "GET /api/users response 200 response body: application/json",
  },
]
`;

exports[`ResponseBodyRule property assertions added failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": Array [
            "hello",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "hello",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/hello",
        "kind": "field",
      },
      "value": Object {
        "flatSchema": Object {},
        "key": "hello",
        "required": false,
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "field does not have \`type\`",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": false,
    "received": undefined,
    "type": "requirement",
    "where": "GET /api/users response 200 response body: application/json property hello",
  },
]
`;

exports[`ResponseBodyRule property assertions added passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": Array [
            "hello",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "hello",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/hello",
        "kind": "field",
      },
      "value": Object {
        "flatSchema": Object {
          "type": "string",
        },
        "key": "hello",
        "required": false,
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request type",
    "passed": true,
    "received": undefined,
    "type": "requirement",
    "where": "GET /api/users response 200 response body: application/json property hello",
  },
]
`;

exports[`ResponseBodyRule property assertions changed failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "type": "number",
          },
          "key": "hello",
          "required": false,
        },
        "before": Object {
          "flatSchema": Object {
            "format": "uuid",
            "type": "string",
          },
          "key": "hello",
          "required": false,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": Array [
            "items",
            "hello",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "items",
          "hello",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/items/properties/hello",
        "kind": "field",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "must not change type",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "property type",
    "passed": false,
    "received": undefined,
    "type": "changed",
    "where": "GET /api/users response 200 response body: application/json property items/hello",
  },
]
`;

exports[`ResponseBodyRule property assertions changed passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "flatSchema": Object {
            "format": "date",
            "type": "string",
          },
          "key": "hello",
          "required": false,
        },
        "before": Object {
          "flatSchema": Object {
            "format": "uuid",
            "type": "string",
          },
          "key": "hello",
          "required": false,
        },
      },
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": Array [
            "items",
            "hello",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "items",
          "hello",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/items/properties/hello",
        "kind": "field",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "property type",
    "passed": true,
    "received": undefined,
    "type": "changed",
    "where": "GET /api/users response 200 response body: application/json property items/hello",
  },
]
`;

exports[`ResponseBodyRule property assertions removed failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "removed",
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": Array [
            "goodbye",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "goodbye",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/goodbye",
        "kind": "field",
      },
      "removed": Object {
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "goodbye",
          "required": true,
        },
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "cannot remove bodies with array schema",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request removal",
    "passed": false,
    "received": undefined,
    "type": "removed",
    "where": "GET /api/users response 200 response body: application/json property goodbye",
  },
]
`;

exports[`ResponseBodyRule property assertions removed passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "changeType": "removed",
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": Array [
            "goodbye",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "goodbye",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/goodbye",
        "kind": "field",
      },
      "removed": Object {
        "before": Object {
          "flatSchema": Object {
            "type": "string",
          },
          "key": "goodbye",
          "required": false,
        },
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request removal",
    "passed": true,
    "received": undefined,
    "type": "removed",
    "where": "GET /api/users response 200 response body: application/json property goodbye",
  },
]
`;

exports[`ResponseBodyRule property assertions requirement failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": Array [
            "hello",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "hello",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/hello",
        "kind": "field",
      },
      "value": Object {
        "flatSchema": Object {},
        "key": "hello",
        "required": false,
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "field does not have \`type\`",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response type",
    "passed": false,
    "received": undefined,
    "type": "requirement",
    "where": "GET /api/users response 200 response body: application/json property hello",
  },
]
`;

exports[`ResponseBodyRule property assertions requirement passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {
          "inResponse": Object {
            "body": Object {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": Array [
            "hello",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": Array [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "hello",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/hello",
        "kind": "field",
      },
      "value": Object {
        "flatSchema": Object {
          "type": "string",
        },
        "key": "hello",
        "required": false,
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response type",
    "passed": true,
    "received": undefined,
    "type": "requirement",
    "where": "GET /api/users response 200 response body: application/json property hello",
  },
]
`;
